koel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: koel
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql/mysql-server:8.0
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: koel-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koel
  namespace: koel
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: koel
  template:
    metadata:
      labels:
        app: koel
    spec:
      containers:
        - name: koel
          image: phanan/koel
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: music
              mountPath: /music
            - name: covers
              mountPath: /var/www/html/public/img/covers
            - name: search-index
              mountPath: /var/www/html/storage/search-indexes
      volumes:
        - name: music
          persistentVolumeClaim:
            claimName: koel-music
        - name: covers
          persistentVolumeClaim:
            claimName: koel-covers
        - name: search-index
          persistentVolumeClaim:
            claimName: koel-search-index
